# plenoxels

./: main.py  plenoptimize.py  plenoxel.py  pyproject.toml  requirements-noversion.txt  setup.py  sh.py
